# frankinglfw

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
jni/: CMakeLists.txt  Glfw.h  io_github_jaquobia_Glfw.cpp  io_github_jaquobia_Glfw.h
src/main/java/io/github/jaquobia/: Glfw.java  GlfwCallback.java  GlfwVideoMode.java  NativeUtils.java  SharedLibraryLoader.java
src/test/java/: Main.java
